--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Unit Tests
+name: Run Unit Tests and Publish Package
 
 on:
   push:
@@ -12,24 +12,41 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Setup test environment
+        uses: ./.github/actions/setup-test
         with:
           node-version: '20'
 
-      - name: Install dependencies
-        run: npm install
-
       - name: Run tests
-        run: npm test -- --ci --reporters=default --reporters=jest-junit
-        env:
-          JEST_JUNIT_OUTPUT_DIR: ./test-reports
+        run: npm test -- --ci
 
       - name: Upload test report
         uses: actions/upload-artifact@v4
         with:
           name: test-report
           path: test-reports/junit.xml
+
+  publish-package:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.PACKAGE_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/mallika1109/ic2:latest
+          file: ./Dockerfile
