--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,52 +1,80 @@
 name: Run Unit Tests and Publish Package
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+   on:
+     push:
+       branches:
+         - main
+     pull_request:
+       branches:
+         - main
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup test environment
-        uses: ./.github/actions/setup-test
-        with:
-          node-version: '20'
+   jobs:
+     test:
+       runs-on: ubuntu-latest
+       steps:
+         - name: Setup test environment
+           uses: ./.github/actions/setup-test
+           with:
+             node-version: '20'
 
-      - name: Run tests
-        run: npm test -- --ci
+         - name: Run tests
+           run: npm test -- --ci
 
-      - name: Upload test report
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-report
-          path: test-reports/junit.xml
+         - name: Upload test report
+           uses: actions/upload-artifact@v4
+           with:
+             name: test-report
+             path: test-reports/junit.xml
 
-  publish-package:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+     publish-package:
+       runs-on: ubuntu-latest
+       needs: test
+       steps:
+         - name: Checkout code
+           uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+         - name: Set up Docker Buildx
+           uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.PACKAGE_TOKEN }}
+         - name: Log in to GitHub Container Registry
+           uses: docker/login-action@v3
+           with:
+             registry: ghcr.io
+             username: ${{ github.actor }}
+             password: ${{ secrets.PACKAGE_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/mallika1109/ic2:latest
-          file: ./Dockerfile
+         - name: Build and push Docker image
+           uses: docker/build-push-action@v5
+           with:
+             context: .
+             push: true
+             tags: ghcr.io/mallika1109/ic2:latest
+             file: ./Dockerfile
+
+     integration-test:
+       runs-on: ubuntu-latest
+       needs: publish-package
+       services:
+         mock-service:
+           image: ghcr.io/mallika1109/ic2:latest
+           ports:
+             - 8080:3000
+       steps:
+         - name: Checkout code
+           uses: actions/checkout@v4
+
+         - name: Setup test environment
+           uses: ./.github/actions/setup-test
+           with:
+             node-version: '20'
+
+         - name: Run integration tests
+           run: npm test -- --ci
+           env:
+             MOCK_SERVICE_URL: http://mock-service:8080
+
+         - name: Upload test report
+           uses: actions/upload-artifact@v4
+           with:
+             name: integration-test-report
+             path: test-reports/junit.xml
